// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Card Card.Group matches snapshot 1`] = `
<div>
  <div
    class="nhsuk-grid-row nhsuk-card-group"
  >
    <div
      class="nhsuk-grid-column-one-half nhsuk-card-group__item"
    >
      <div
        class="nhsuk-card"
      >
        <div
          class="nhsuk-card__content"
        >
          <h2
            class="nhsuk-card__heading"
          >
            Test Card 1
          </h2>
          <p
            class="nhsuk-card__description"
          >
            Test Card 1 Description
          </p>
        </div>
      </div>
    </div>
    <div
      class="nhsuk-grid-column-one-half nhsuk-card-group__item"
    >
      <div
        class="nhsuk-card"
      >
        <div
          class="nhsuk-card__content"
        >
          <h2
            class="nhsuk-card__heading"
          >
            Test Card 2
          </h2>
          <p
            class="nhsuk-card__description"
          >
            Test Card 2 Description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Care card variant emergency matches the snapshot 1`] = `
<div>
  <div
    class="nhsuk-card nhsuk-card--care nhsuk-card--care--emergency"
  >
    <div
      class="nhsuk-card__heading-container"
    >
      <h2
        class="nhsuk-card__heading"
      >
        <span
          role="text"
        >
          <span
            class="nhsuk-u-visually-hidden"
          >
            Immediate action required: 
          </span>
          Emergency heading (red and black)
        </span>
      </h2>
      <span
        aria-hidden="true"
        class="nhsuk-card--care__arrow"
      />
    </div>
  </div>
</div>
`;

exports[`Card Care card variant non-urgent matches the snapshot 1`] = `
<div>
  <div
    class="nhsuk-card nhsuk-card--care nhsuk-card--care--non-urgent"
  >
    <div
      class="nhsuk-card__heading-container"
    >
      <h2
        class="nhsuk-card__heading"
      >
        <span
          role="text"
        >
          <span
            class="nhsuk-u-visually-hidden"
          >
            Non-urgent advice: 
          </span>
          Non urgent heading (blue)
        </span>
      </h2>
      <span
        aria-hidden="true"
        class="nhsuk-card--care__arrow"
      />
    </div>
  </div>
</div>
`;

exports[`Card Care card variant urgent matches the snapshot 1`] = `
<div>
  <div
    class="nhsuk-card nhsuk-card--care nhsuk-card--care--urgent"
  >
    <div
      class="nhsuk-card__heading-container"
    >
      <h2
        class="nhsuk-card__heading"
      >
        <span
          role="text"
        >
          <span
            class="nhsuk-u-visually-hidden"
          >
            Urgent advice: 
          </span>
          Urgent heading (red)
        </span>
      </h2>
      <span
        aria-hidden="true"
        class="nhsuk-card--care__arrow"
      />
    </div>
  </div>
</div>
`;

exports[`Card matches snapshot (via server): client 1`] = `
<div>
  <link
    as="image"
    href="imageSrc"
    rel="preload"
  />
  <div
    class="nhsuk-card"
  >
    <img
      alt="imageAlt"
      class="nhsuk-card__img"
      src="imageSrc"
    />
    <div
      class="nhsuk-card__content"
    >
      <h2
        class="nhsuk-card__heading"
      >
        If you need help now but it's not an emergency
      </h2>
      <p
        class="nhsuk-card__description"
      >
        Go to 
        <a
          href="#"
        >
          111.nhs.uk
        </a>
         or 
        <a
          href="#"
        >
          call 111
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`Card matches snapshot (via server): server 1`] = `
<div>
  <link
    as="image"
    href="imageSrc"
    rel="preload"
  />
  <div
    class="nhsuk-card"
  >
    <img
      alt="imageAlt"
      class="nhsuk-card__img"
      src="imageSrc"
    />
    <div
      class="nhsuk-card__content"
    >
      <h2
        class="nhsuk-card__heading"
      >
        If you need help now but it's not an emergency
      </h2>
      <p
        class="nhsuk-card__description"
      >
        Go to 
        <a
          href="#"
        >
          111.nhs.uk
        </a>
         or 
        <a
          href="#"
        >
          call 111
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`Card matches snapshot 1`] = `
<div>
  <div
    class="nhsuk-card"
  >
    <img
      alt="imageAlt"
      class="nhsuk-card__img"
      src="imageSrc"
    />
    <div
      class="nhsuk-card__content"
    >
      <h2
        class="nhsuk-card__heading"
      >
        If you need help now but it's not an emergency
      </h2>
      <p
        class="nhsuk-card__description"
      >
        Go to 
        <a
          href="#"
        >
          111.nhs.uk
        </a>
         or 
        <a
          href="#"
        >
          call 111
        </a>
      </p>
    </div>
  </div>
</div>
`;
